:lipstick: Use !important for link color

--- a/index.html
+++ b/index.html
@@ -31,10 +31,6 @@
       text-decoration: none;
     }
 
-    a:visited {
-      color: inherit;
-    }
-
     .top {
       align-items: center;
       background-color: black;
@@ -97,7 +93,7 @@
     }
 
     .organization__link {
-      color: #F87B5E;
+      color: #F87B5E !important;
       font-family: 'Cousine', monospace;
       font-size: 4rem;
       font-weight: 400;
